[package]
authors = ["Reece Stevens <reecestevens24@gmail.com>"]
name = "ra8875"
version = "0.1.0"

[dependencies]
nb = "0.1.1"
embedded-graphics = { git = "https://github.com/rfuest/embedded-graphics", branch = "target-specific-drawables" }
log = "0.4.6"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]
